--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Woodley T.K. | Backend Developer Portfolio</title>
+
+    <meta name="author" content="Woodley T.K." />
+    <meta
+      name="description"
+      content="Personal portfolio by Woodley T.K. — Backend Developer."
+    />
+    <meta
+      name="keywords"
+      content="Woodley T.K., web developer, Backend, React, Node.js, portfolio, fullstack"
+    />
+    <meta name="copyright" content="Woodley T.K." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,8 +25,20 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="margin: 0; font-family: 'Ubuntu', sans-serif">
     <div id="root"></div>
+
+    <footer
+      style="
+        text-align: center;
+        font-size: 0.8rem;
+        color: #888;
+        padding: 1rem 0;
+      "
+    >
+      &copy; 2025 Woodley T.K. | All rights reserved.
+    </footer>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
